@@ -40,3 +40,4 @@ triple_xbow.shp
 pants.shp
 collar.shp
 hoods.shp
+musket.shp
